javadoc service + fix test