@@ -11,46 +11,67 @@ import org.springframework.stereotype.Service;
 
 import java.io.IOException;
 import java.util.*;
-import java.util.stream.Collectors;
 
+/**
+ * Service class responsible for retrieving and managing information related to persons,
+ * including medical records and fire station coverage. It provides methods for fetching
+ * personal information, child alerts, and fire station coverage data.
+ */
 @Service
 public class PersonInfoService {
 
-    private static final Logger logger = LogManager.getLogger(PersonInfoService.class); // Initialisation correcte du Logger
+    private static final Logger logger = LogManager.getLogger(PersonInfoService.class); // Logger initialization
     private List<Person> personList;
-    private final ObjectMapper objectMapper; // Injection de l'ObjectMapper via le constructeur
+    private final ObjectMapper objectMapper; // ObjectMapper injected via constructor
     private final MedicalRecordService medicalRecordService;
     private final FireStationService fireStationService;
 
-    // Injection de l'ObjectMapper par Spring
+    /**
+     * Constructor that initializes the PersonInfoService with injected dependencies for ObjectMapper,
+     * MedicalRecordService, and FireStationService. It also loads the person data from the JSON file.
+     *
+     * @param objectMapper        The ObjectMapper instance injected by Spring.
+     * @param medicalRecordService The service for accessing medical records.
+     * @param fireStationService   The service for accessing fire station data.
+     * @throws IllegalArgumentException if there is an error loading the person data.
+     */
     public PersonInfoService(
             ObjectMapper objectMapper,
             MedicalRecordService medicalRecordService,
             FireStationService fireStationService
     ) {
-        this.objectMapper = objectMapper; // Assignation de l'ObjectMapper injecté
+        this.objectMapper = objectMapper;
         this.medicalRecordService = medicalRecordService;
         this.fireStationService = fireStationService;
         try {
             loadPersonList();
         } catch (Exception e) {
-            logger.error("Erreur lors du chargement des données JSON : {}", e.getMessage());
-            throw new IllegalArgumentException("Impossible de charger les données JSON", e);
+            logger.error("Error loading JSON data: {}", e.getMessage());
+            throw new IllegalArgumentException("Unable to load JSON data", e);
         }
     }
 
+    /**
+     * Loads the list of persons from the `data.json` file.
+     * The JSON data is parsed and mapped into a {@link PersonsData} object.
+     *
+     * @throws IOException if there is an error reading the file or parsing the data.
+     */
     private void loadPersonList() throws IOException {
-        // Lire le fichier JSON et le mapper sur la classe PersonsData
         PersonsData data = objectMapper.readValue(
                 new ClassPathResource("data.json").getInputStream(),
                 PersonsData.class
         );
-
-        // Extraire la liste des stations de la structure racine
         personList = data.getPersons();
-        logger.info("Données chargées : {}", personList.size());
+        logger.info("Data loaded: {}", personList.size());
     }
 
+    /**
+     * Retrieves information about a list of persons, including personal details and medical information.
+     *
+     * @param persons A list of {@link Person} objects whose information is to be retrieved.
+     * @return a list of maps containing personal information, age, medications, and allergies for each person.
+     */
     public List<Map<String, Object>> getAllPersonInfo(List<Person> persons) {
         return persons.stream()
                 .map(person -> {
@@ -58,7 +79,7 @@ public class PersonInfoService {
                             person.getFirstName(), person.getLastName());
                     int age = (medicalRecord != null && medicalRecord.getBirthDate() != null)
                             ? DateUtils.calculateAge(medicalRecord.getBirthDate())
-                            : 0; // Valeur par défaut si la date de naissance est manquante
+                            : 0; // Default value if birthdate is missing
 
                     return Map.of(
                             "firstName", person.getFirstName(),
@@ -71,72 +92,77 @@ public class PersonInfoService {
                             "allergies", medicalRecord != null ? medicalRecord.getAllergies() : Collections.emptyList()
                     );
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    /**
+     * Retrieves a list of children living at a specific address.
+     * It filters persons based on age and address, ensuring that only children (age <= 18) are included.
+     *
+     * @param address The address where children need to be identified.
+     * @return a list of maps containing information about each child and their family members.
+     */
     public List<Map<String, Object>> getChildAlertByAddress(String address) {
-        // Filtrer les enfants vivant à l'adresse donnée
         List<Person> children = personList.stream()
                 .filter(person -> Objects.equals(person.getAddress(), address) &&
-                        // Vérifier que l'âge est inférieur ou égal à 18 en accédant au MedicalRecord de chaque personne
                         DateUtils.calculateAge(medicalRecordService.getMedicalRecordByFirstnameAndLastname(person.getFirstName(), person.getLastName()).getBirthDate()) <= 18)
-                .collect(Collectors.toList());
+                .toList();
 
-        // Si aucun enfant n'est trouvé, retourner une liste vide
         if (children.isEmpty()) {
             return Collections.emptyList();
         }
 
-        // Construire la liste des informations des enfants
         return children.stream()
                 .map(child -> {
-                    // Récupérer les autres membres du foyer vivant à la même adresse
                     List<Person> familyMembers = personList.stream()
-                            .filter(person -> Objects.equals(person.getAddress(), address) && !person.equals(child)) // Exclure l'enfant actuel
-                            .collect(Collectors.toList());
+                            .filter(person -> Objects.equals(person.getAddress(), address) && !person.equals(child))
+                            .toList();
 
-                    // Construire l'objet contenant le prénom, le nom, l'âge et la liste des autres membres du foyer
                     return Map.of(
                             "firstName", child.getFirstName(),
                             "lastName", child.getLastName(),
                             "age", DateUtils.calculateAge(medicalRecordService.getMedicalRecordByFirstnameAndLastname(child.getFirstName(), child.getLastName()).getBirthDate()),
                             "familyMembers", familyMembers.stream()
-                                    .map(familyMember -> familyMember.getFirstName() + " " + familyMember.getLastName()) // Liste des noms des membres
-                                    .collect(Collectors.toList())
+                                    .map(familyMember -> familyMember.getFirstName() + " " + familyMember.getLastName())
+                                    .toList()
                     );
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    /**
+     * Retrieves information about persons covered by a specific fire station, identified by its station number.
+     * It calculates the number of adults and children covered by the station and returns detailed information about them.
+     *
+     * @param stationNumber The number of the fire station whose coverage is to be checked.
+     * @return a map containing information about the persons covered by the fire station,
+     *         including their names, addresses, phone numbers, and the count of adults and children.
+     */
     public Map<String, Object> getCoverageByFireStation(int stationNumber) {
-        // Récupérer les adresses desservies par la station donnée
         List<String> addresses = fireStationService.getAddressByFireStationsNumber(stationNumber);
 
-        // Filtrer les personnes vivant à ces adresses
         List<Person> coveredPersons = personList.stream()
-                .filter(person -> addresses.contains(person.getAddress())) // Vérifier si l'adresse est desservie
-                .collect(Collectors.toList());
+                .filter(person -> addresses.contains(person.getAddress()))
+                .toList();
 
-        // Calculer le nombre d'adultes et d'enfants
         long adultsCount = coveredPersons.stream()
                 .filter(person -> {
                     MedicalRecord medicalRecord = medicalRecordService.getMedicalRecordByFirstnameAndLastname(
                             person.getFirstName(), person.getLastName());
-                    logger.info("medicalRecord BirthDate : {}", medicalRecord.getBirthDate());
+                    logger.info("MedicalRecord BirthDate: {}", medicalRecord.getBirthDate());
 
-                    int age = (medicalRecord != null && medicalRecord.getBirthDate() != null)
+                    int age = medicalRecord.getBirthDate() != null
                             ? DateUtils.calculateAge(medicalRecord.getBirthDate())
                             : -1;
                     if(age == -1){
-                        throw new IllegalArgumentException("La date de naissance ne peut pas être nulle.");
+                        throw new IllegalArgumentException("Birthdate cannot be null.");
                     }
                     return age > 18;
                 })
                 .count();
-        logger.info("adultsCount : {}", adultsCount);
+        logger.info("Adults count: {}", adultsCount);
         long childrenCount = coveredPersons.size() - adultsCount;
 
-        // Construire la liste des informations des personnes couvertes par la caserne
         List<Map<String, String>> personDetails = coveredPersons.stream()
                 .map(person -> Map.of(
                         "firstName", person.getFirstName(),
@@ -144,9 +170,8 @@ public class PersonInfoService {
                         "address", person.getAddress(),
                         "phoneNumber", person.getPhone()
                 ))
-                .collect(Collectors.toList());
+                .toList();
 
-        // Retourner les informations au format attendu
         Map<String, Object> response = new HashMap<>();
         response.put("persons", personDetails);
         response.put("adultCount", adultsCount);
